<resources>
    <string name="app_name">Nutrition App</string>
    <string name="welcome">Hoş Geldiniz</string>
    <string name="login">Giriş</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="forget_pass">Parola Sıfırla</string>
    <string name="mail">mail</string>
    <string name="pass">password</string>
    <string name="repasts">Öğünler</string>
    <string name="portion">Bir Porsiyon</string>

    <string-array name="repast">
        <item>Kahvaltı</item>

        <item>Öğle Yemeği</item>

        <item>Akşam Yemeği</item>
        <item>Atıştırma</item>

    </string-array>
    <string-array name="recommendation">
        <item>Önerilen: ..Kcal </item>
        <item>Önerilen: ..Kcal </item>
        <item>Önerilen: ..Kcal </item>
        <item>Önerilen: ..Kcal </item>
    </string-array>
    <string name="title_activity_add_food_database">AddFoodDatabase</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="repast_name_info">Öğün Adı</string>
    <string name="repast_name">Yiyecek Adı</string>


</resources>